--- a/OpenCodeEdit/data/languages.plist
+++ b/OpenCodeEdit/data/languages.plist
@@ -18,5 +18,11 @@
 	<integer>2</integer>
 	<key>public.c-plus-plus-source</key>
 	<integer>2</integer>
+	<key>public.xml</key>
+	<integer>114</integer>
+	<key>dyn.age81w2prru</key>
+	<integer>115</integer>
+	<key>public.python-script</key>
+	<integer>87</integer>
 </dict>
 </plist>
