--- a/OpenCodeEdit/Info.plist
+++ b/OpenCodeEdit/Info.plist
@@ -12,7 +12,7 @@
 				<string>h</string>
 			</array>
 			<key>CFBundleTypeName</key>
-			<string>C Header Source</string>
+			<string>C header source</string>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>LSItemContentTypes</key>
@@ -31,7 +31,7 @@
 				<string>cxx</string>
 			</array>
 			<key>CFBundleTypeName</key>
-			<string>C++ Source</string>
+			<string>C++ source code</string>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>LSItemContentTypes</key>
@@ -67,12 +67,30 @@
 				<string>html</string>
 			</array>
 			<key>CFBundleTypeName</key>
-			<string>HTML document</string>
+			<string>HTML text</string>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>LSItemContentTypes</key>
 			<array>
 				<string>public.html</string>
+			</array>
+			<key>LSTypeIsPackage</key>
+			<integer>0</integer>
+			<key>NSDocumentClass</key>
+			<string>CodeDocument</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>java</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>Java source code</string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>com.sun.java-source</string>
 			</array>
 			<key>LSTypeIsPackage</key>
 			<integer>0</integer>
