--- a/OpenCodeEdit/data/keywords.plist
+++ b/OpenCodeEdit/data/keywords.plist
@@ -4,5 +4,10 @@
 <dict>
 	<key>2</key>
 	<string>alignas alignof and and_eq asm auto bitand bitor bool break case catch char char16_t char32_t class compl const constexpr const_cast continue decltype default delete do double dynamic_cast else enum explicit export extern false float for friend goto if inline int long mutable namespace new noexcept not not_eq nullptr operator or or_eq private protected public register reinterpret_cast return short signed sizeof static static_assert static_cast struct switch template this thread_local throw true try typedef typeid typename union unsigned using virtual void volatile wchar_t while xor xor_eq</string>
+	<key>49</key>
+	<string>abstract continue for new switch assert default goto package synchronized boolean do if private this break double implements protected throw byte else import public throws case enum instanceof return transient catch extends int short try char final interface static void class finally long strictfp volatile const float native super while true false null</string>
+	<key>50</key>
+	<string>abstract arguments boolean break byte case catch char class const continue debugger default delete do double else enum eval export
+extends false final finally float for function goto if implements import in instanceof int interface let long native new null package private protected public return short static super switch synchronized this throw throws transient true try typeof var void volatile while with yield</string>
 </dict>
 </plist>
