--- a/OpenCodeEdit/data/languages.plist
+++ b/OpenCodeEdit/data/languages.plist
@@ -26,5 +26,7 @@
 	<integer>87</integer>
 	<key>com.sun.java-source</key>
 	<integer>49</integer>
+	<key>dyn.age80442</key>
+	<integer>60</integer>
 </dict>
 </plist>
