Preliminary development of style editor

--- a/OpenCodeEdit/data/themes.plist
+++ b/OpenCodeEdit/data/themes.plist
@@ -4,6 +4,23 @@
 <dict>
 	<key>Default</key>
 	<dict>
+		<key>languageDescriptions</key>
+		<dict>
+			<key>cpp</key>
+			<string>C, C++, Java, and JavaScript</string>
+			<key>css</key>
+			<string>CSS</string>
+			<key>hypertext</key>
+			<string>HTML</string>
+			<key>xml</key>
+			<string>XML</string>
+			<key>python</key>
+			<string>Python</string>
+			<key>yaml</key>
+			<string>YAML</string>
+			<key>makefile</key>
+			<string>Makefile</string>
+		</dict>
 		<key>editor</key>
 		<dict>
 			<key>caretForegroundColor</key>
@@ -42,7 +59,7 @@
 			<key>italic</key>
 			<false/>
 			<key>fontName</key>
-			<string>Menlo-Regular</string>
+			<string>Menlo</string>
 		</dict>
 		<key>css</key>
 		<array>
@@ -176,6 +193,8 @@
 		<key>cpp</key>
 		<array>
 			<dict>
+				<key>description</key>
+				<string>Strings</string>
 				<key>styleId</key>
 				<integer>6</integer>
 				<key>foregroundColor</key>
@@ -189,6 +208,8 @@
 				</dict>
 			</dict>
 			<dict>
+				<key>description</key>
+				<string>Word matches</string>
 				<key>styleId</key>
 				<integer>16</integer>
 				<key>backgroundColor</key>
@@ -202,6 +223,8 @@
 				</dict>
 			</dict>
 			<dict>
+				<key>description</key>
+				<string>Numbers</string>
 				<key>styleId</key>
 				<integer>4</integer>
 				<key>foregroundColor</key>
@@ -215,6 +238,8 @@
 				</dict>
 			</dict>
 			<dict>
+				<key>description</key>
+				<string>Characters</string>
 				<key>styleId</key>
 				<integer>7</integer>
 				<key>foregroundColor</key>
@@ -228,6 +253,8 @@
 				</dict>
 			</dict>
 			<dict>
+				<key>description</key>
+				<string>Keywords</string>
 				<key>styleId</key>
 				<integer>5</integer>
 				<key>bold</key>
@@ -243,6 +270,8 @@
 				</dict>
 			</dict>
 			<dict>
+				<key>description</key>
+				<string>Block comments</string>
 				<key>styleId</key>
 				<integer>1</integer>
 				<key>foregroundColor</key>
@@ -256,6 +285,8 @@
 				</dict>
 			</dict>
 			<dict>
+				<key>description</key>
+				<string>Doc comments</string>
 				<key>styleId</key>
 				<integer>3</integer>
 				<key>foregroundColor</key>
@@ -269,6 +300,8 @@
 				</dict>
 			</dict>
 			<dict>
+				<key>description</key>
+				<string>Inline comments</string>
 				<key>styleId</key>
 				<integer>2</integer>
 				<key>foregroundColor</key>
@@ -282,6 +315,8 @@
 				</dict>
 			</dict>
 			<dict>
+				<key>description</key>
+				<string>Preprocessor</string>
 				<key>styleId</key>
 				<integer>9</integer>
 				<key>foregroundColor</key>
@@ -297,6 +332,21 @@
 		</array>
 		<key>hypertext</key>
 		<array>
+			<dict>
+				<key>description</key>
+				<string>Strings</string>
+				<key>styleId</key>
+				<integer>6</integer>
+				<key>foregroundColor</key>
+				<dict>
+					<key>red</key>
+					<integer>1</integer>
+					<key>green</key>
+					<integer>0</integer>
+					<key>blue</key>
+					<integer>0</integer>
+				</dict>
+			</dict>
 			<dict>
 				<key>styleId</key>
 				<integer>26</integer>
@@ -771,7 +821,7 @@
 			<key>italic</key>
 			<false/>
 			<key>fontName</key>
-			<string>Menlo-Regular</string>
+			<string>Menlo</string>
 		</dict>
 		<key>css</key>
 		<array>
@@ -1026,6 +1076,19 @@
 		</array>
 		<key>hypertext</key>
 		<array>
+			<dict>
+				<key>styleId</key>
+				<integer>6</integer>
+				<key>foregroundColor</key>
+				<dict>
+					<key>red</key>
+					<real>0.435</real>
+					<key>green</key>
+					<real>0.91</real>
+					<key>blue</key>
+					<real>0.42</real>
+				</dict>
+			</dict>
 			<dict>
 				<key>styleId</key>
 				<integer>26</integer>
